--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "react-datepicker": "^7.4.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-images-uploading": "^3.1.7",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
+    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
